# som-quality-checker

./: .gitignore  AGENTS.md  README.md  build_exe.ps1  main.py  pyproject.toml  som_analyze.py  som_analyzer.ipynb  som_analyzer.py
data/: failed_rows.xlsx
som_analyze/: README.md  pyproject.toml
som_analyze/data/: som_analyze.db
som_analyze/src/som_analyze/: __init__.py  config.py  smoke.py
som_analyze/src/som_analyze/analysis/: __init__.py  runner.py  validator.py
som_analyze/src/som_analyze/db/: repository.py  schema.py
som_analyze/src/som_analyze/tui/: __init__.py  app.py  screens.py
som_analyzer/: README.md  pyproject.toml
som_analyzer/data/: som_analyzer.db
som_analyzer/src/som_analyzer/: __init__.py  config.py  smoke.py
som_analyzer/src/som_analyzer/analysis/: loader.py  runner.py  validator.py
som_analyzer/src/som_analyzer/db/: repository.py  schema.py
som_analyzer/src/som_analyzer/gui/: __init__.py  app.py  screens.py  styles.py
