[project]
name = "som-analyze"
version = "0.1.0"
description = "SOM Excel analyzer with validation history and PyQt desktop app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "PyQt6>=6.7.1",
    "xlsxwriter>=3.2.9",
]

[project.scripts]
som-analyze = "som_analyzer.gui.app:run_app"
som-analyze-smoke = "som_analyzer.smoke:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/som_analyzer"]
